--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,4 +45,4 @@ jobs:
       - run: mix test
 
       - store_test_results:
-          path: /_build/test/lib/wand
+          path: _build/test/lib/wand
