--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,6 +43,7 @@ jobs:
           paths: "_build"
 
       - run: mix test
+      - run: mix coveralls.circle
 
       - store_test_results:
           path: _build/test/lib/wand
