--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,7 @@ jobs:
       - checkout
       - run: mix local.hex --force
       - run: mix local.rebar --force
+      - run: mix archive.install github anilredshift/wand-core --force
 
       - restore_cache:
           keys:
