--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,6 +44,7 @@ jobs:
 
       - run: mix test
       - run: mix coveralls.circle
+      - run: mix test --only external
 
       - store_test_results:
           path: _build/test/lib/wand
