--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,9 +9,10 @@ jobs:
     working_directory: ~/wand
 
     steps:
-      - checkout
       - run: mix local.hex --force
       - run: mix local.rebar --force
+      - run: mix archive.install hex wand_core --force
+      - checkout
 
       - restore_cache:
           keys:
